--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,4 +21,30 @@
     line-height: 50px;
     list-style-type: none;
     color: #FFFFFF;
+    cursor: pointer;
+}
+
+.fazenda-background {
+    background-image: url('../image/banner.png');
+    height: 400px;
+    width: 100%;
+}
+
+.fazenda-info{
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    gap: 64px;
+    align-items: center;
+    width: 100%;
+    justify-content: center;
+    height: 400px;
+}
+
+.fazenda-heading {
+    background-color: #225243CC;
+    color: #FFFFFF;
+    font-size: 1.2rem;
+    padding: 12px 40px;
+    margin-bottom: 40px;
 }
