--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -56,7 +56,9 @@ main {
 .card-gallery {
     display: flex;
     flex-direction: row;
-    gap: 32px;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    gap: 40px;
 }
 
 .card {
@@ -69,8 +71,60 @@ main {
     display: flex;
     align-items: center;
     justify-content: center;
+    color: #FFFFFF;
+    font-weight: 400;
+    border-radius: 20px 20px 0 0;
+    letter-spacing: .2rem;
 }
 
-.card-heading h1 {
-    
+.card-paragraph {
+    display: flex;
+    justify-content: center;
+    line-height: 1.4rem;
+    padding: 12px;
+}
+
+.card-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 44px;
+  background-color: #50AA5A;
+  border-radius: 0 0 20px 20px;
+  overflow: hidden; /* ESSENCIAL para esconder o ::before fora do hover */
+}
+
+.card-link a {
+  color: #FFFFFF;
+  text-decoration: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  width: 100%;
+  height: 100%;
+  z-index: 0;
+  transition: color 300ms ease;
+}
+
+.card-link a::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 100%;
+  right: 0;
+  bottom: 0;
+  background-color: #FFFFFF;
+  transition: left 500ms ease-out;
+  border: 1px solid #50AA5A;
+  border-radius: 0 0 20px 20px;
+  z-index: -1;
+}
+
+.card-link a:hover::before {
+  left: 0;
+}
+
+.card-link a:hover {
+  color: #50AA5A;
 }
