--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,7 +12,7 @@
 .nav-bar > ul{
     display: flex;
     flex-direction: row;
-    gap: 32px;
+    gap: 40px;
     margin: 0 80px;
 }
 
@@ -22,6 +22,14 @@
     list-style-type: none;
     color: #FFFFFF;
     cursor: pointer;
+    transition: transform 0.3s ease-in-out;
+}
+
+.nav-bar-link:hover{
+    color: #50AA5A;
+    transform: scale(1.02rem);
+    text-decoration: underline;
+    text-underline-offset: 6px;
 }
 
 .fazenda-background {
@@ -47,6 +55,12 @@
     font-size: 1.2rem;
     padding: 12px 40px;
     margin-bottom: 40px;
+    box-shadow: 5px 5px 5px #1B4436;
+    transform: transition 0.5s ease-in-out;
+}
+
+.fazenda-heading:hover {
+    color: #50AA5A;
 }
 
 main {
@@ -62,7 +76,8 @@ main {
 }
 
 .card {
-    border: 1px solid red;
+    border: 1px solid #50AA5A;
+    border-radius: 21px;
     width: 384px;
 }
 
@@ -75,6 +90,7 @@ main {
     font-weight: 400;
     border-radius: 20px 20px 0 0;
     letter-spacing: .2rem;
+    text-shadow: 4px 4px 4px #1B4436;
 }
 
 .card-paragraph {
@@ -82,6 +98,7 @@ main {
     justify-content: center;
     line-height: 1.4rem;
     padding: 12px;
+    color: #1B4436;
 }
 
 .card-link {
@@ -91,7 +108,7 @@ main {
   height: 44px;
   background-color: #50AA5A;
   border-radius: 0 0 20px 20px;
-  overflow: hidden; /* ESSENCIAL para esconder o ::before fora do hover */
+  overflow: hidden;
 }
 
 .card-link a {
@@ -127,4 +144,8 @@ main {
 
 .card-link a:hover {
   color: #50AA5A;
+}
+
+footer {
+    background-color: #1B4436;
 }
